Сетка на гридах для главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -14,15 +14,17 @@
   <header class="header">
     <h1 class="visually-hidden">Магазин строительных материалов и инструментов ТЕХНОМАРТ</h1>
     <section class="header-top">
-      <a href="index.html" class="logo">
-        <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
-      </a>
-      <input type="search" class="search-field" name="search" id="search-field">
-      <a href="blank.html" class="header-top-link header-bookmarks">Закладки</a>
-      <a href="blank.html" class="header-top-link header-cart">Корзина:10 </a>
-      <a href="blank.html" class="header-top-link header-ordering">Оформить заказ</a>
+      <div class="header-top-menu container">
+        <a href="index.html" class="logo">
+          <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
+        </a>
+        <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
+        <a href="blank.html" class="header-top-link header-bookmarks">Закладки</a>
+        <a href="blank.html" class="header-top-link header-cart">Корзина:10 </a>
+        <a href="blank.html" class="header-top-link header-ordering">Оформить заказ</a>
+      </div>
     </section>
-    <section class="header-middle">
+    <section class="header-middle container">
       <p class="header-text">Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
       <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
       <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
@@ -31,7 +33,7 @@
       <a href="blank.html" class="lnk-userdata lnk-my-orders">Мои заказы</a>
       <a href="blank.html" class="lnk-userdata lnk-my-cabinet">Личный кабинет</a>
     </section>
-    <nav class="main-navigation">
+    <nav class="main-navigation container">
       <ul class="site-navigation">
         <li class="navigation-item">
           <a href="index.html" class="navigation-link">Главная</a>
