--- a/blank.html
+++ b/blank.html
@@ -16,8 +16,8 @@
   <header class="header">
     <h1 class="visually-hidden">Магазин строительных материалов и инструментов ТЕХНОМАРТ</h1>
     <section class="header-top">
-      <a class="logo">
-        <img src="https://via.placeholder.com/108x18" alt="ТЕХНОМАРТ" width="108" height="18">
+      <a href="index.html" class="logo">
+        <img src="img/logo.svg" alt="ТЕХНОМАРТ" width="108" height="18">
       </a>
       <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
       <a href="blank.html" class="header-top-link header-bookmarks">Закладки:0</a>
@@ -34,7 +34,7 @@
     <nav class="main-navigation">
       <ul class="site-navigation">
         <li class="navigation-item">
-          <a class="navigation-link">Главная</a>
+          <a href="index.html" class="navigation-link">Главная</a>
         </li>
         <li class="navigation-item">
           <a href="blank.html" class="navigation-link">Компания</a>
@@ -63,8 +63,8 @@
   </main>
   <footer class="page-footer main-footer">
     <div class="footer-top">
-      <a class="logo">
-        <img src="https://via.placeholder.com/108x18" alt="ТЕХНОМАРТ" width="108" height="18">
+      <a href="index.html" class="logo">
+        <img src="img/logo.svg" alt="ТЕХНОМАРТ" width="108" height="18">
       </a>
       <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
       <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
