--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
   <header class="header">
     <h1 class="visually-hidden">Магазин строительных материалов и инструментов ТЕХНОМАРТ</h1>
     <section class="header-top">
-      <a class="logo">
-        <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
-      </a>
-      <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
-      <a href="blank.html" class="header-top-link header-bookmarks">Закладки:0</a>
-      <a href="blank.html" class="header-top-link header-cart">Корзина:0</a>
-      <a href="blank.html" class="header-top-link header-ordering">Оформить заказ</a>
+      <div class="header-top-menu container">
+        <a class="logo">
+          <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
+        </a>
+        <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
+        <a href="blank.html" class="header-top-link header-bookmarks">Закладки: 0</a>
+        <a href="blank.html" class="header-top-link header-cart">Корзина: 0</a>
+        <a href="blank.html" class="header-top-link header-ordering">Оформить заказ</a>
+      </div>
     </section>
-    <section class="header-middle">
+    <section class="header-middle container">
       <p class="header-text">Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
       <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
       <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
       <a href="blank.html" class="header-btn btn-login">Войти</a>
       <a href="blank.html" class="header-btn btn-registration">Регистрация</a>
     </section>
-    <nav class="main-navigation">
+    <nav class="main-navigation container">
       <ul class="site-navigation">
         <li class="navigation-item">
           <a class="navigation-link">Главная</a>
@@ -56,10 +58,10 @@
     </nav>
   </header>
   <main>
-    <section class="catalog">
+    <section class="catalog container">
       <div class="catalog-slider">
-        <input type="radio" id="catalog-slider-btn-1" name="cat-toggle" checked>
-        <input type="radio" id="catalog-slider-btn-2" name="cat-toggle">
+        <input type="radio" id="catalog-slider-btn-1" name="cat-toggle">
+        <input type="radio" id="catalog-slider-btn-2" name="cat-toggle" checked>
         <div class="catalog-slider-controls">
           <label for="catalog-slider-btn-1"></label>
           <label for="catalog-slider-btn-2"></label>
@@ -67,24 +69,26 @@
         <button type="button" class="btn-slider-previous" disabled></button>
         <button type="button" class="btn-slider-next"></button>
         <div class="catalog-slider-inner">
-          <div class="catalog-slider-slide">
-            <h3 class="catalog-slide-title">Перфораторы</h3>
-            <p class="catalog-slide-text">Настоящие мужские игрушки</p>
-            <img class="catalog-slide-image" src="img/slider-perforator.jpg" width="620" height="266"
-              alt="Рабочий с перфоратором">
-            <a href="catalog.html" class="btn btn-catalog">Открыть каталог</a>
-          </div>
+          <div class="catalog-slider-slides">
+            <div class="catalog-slider-slide catalog-slider-slide-1">
+              <h3 class="catalog-slide-title">Дрели</h3>
+              <p class="catalog-slide-text">Соседям на радость!</p>
+              <img class="catalog-slide-image" src="img/slider-drill.jpg" width="620" height="266"
+                alt="Рабочий с дрелью">
+              <a href="blank.html" class="btn btn-catalog">Открыть каталог</a>
+            </div>
 
-          <div class="catalog-slider-slide">
-            <h3 class="catalog-slide-title">Дрели</h3>
-            <p class="catalog-slide-text">Соседям на радость!</p>
-            <img class="catalog-slide-image" src="img/slider-drill.jpg" width="620" height="266"
-              alt="Рабочий с дрелью">
-            <a href="blank.html" class="btn btn-catalog">Открыть каталог</a>
+            <div class="catalog-slider-slide catalog-slider-slide-2">
+              <h3 class="catalog-slide-title">Перфораторы</h3>
+              <p class="catalog-slide-text">Настоящие мужские игрушки</p>
+              <img class="catalog-slide-image" src="img/slider-perforator.jpg" width="620" height="266"
+                alt="Рабочий с перфоратором">
+              <a href="catalog.html" class="btn btn-catalog">Открыть каталог</a>
+            </div>
           </div>
         </div>
       </div>
-      <ul class="catalog-cards-list">
+      <ul class="catalog-cards-list catalog-cards-list-top">
         <li class="card-item card-item-yellow new">
           <h3 class="card-title">Материалы</h3>
           <a href="blank.html" class="card-link">На любой вкус</a>
@@ -97,6 +101,8 @@
           <h3 class="card-title">Техника</h3>
           <a href="blank.html" class="card-link">Для стройки</a>
         </li>
+      </ul>
+      <ul class="catalog-cards-list catalog-cards-list-right">
         <li class="card-item card-item-green">
           <h3 class="card-title">Скидки 50%</h3>
           <a href="blank.html" class="card-link">На 350 товаров</a>
@@ -107,7 +113,7 @@
         </li>
       </ul>
     </section>
-    <section class="product">
+    <section class="product container">
       <div class="section-header">
         <h2 class="section-title">Популярные товары:</h2>
         <a href="blank.html" class="btn btn-product">Все популярные товары</a>
@@ -118,7 +124,8 @@
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="img/snippet-32961.jpg" class="product-image" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+          <img src="img/snippet-32961.jpg" class="product-image" width="184" height="164"
+            alt="Перфоратор BOSCH BFG 9000">
           <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 9000</a>
           <p><del class="product-old-price">32500 Р.</del></p>
           <p class="product-price">25500 Р.</p>
@@ -128,7 +135,8 @@
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="img/snippet-18927.jpg" class="product-image" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+          <img src="img/snippet-18927.jpg" class="product-image" width="127" height="112"
+            alt="Перфоратор BOSCH BFG 3000">
           <a href="blank.html" class="product-link">Перфоратор BOSCH BFG 3000</a>
           <p><del class="product-old-price">22500 Р.</del></p>
           <p class="product-price">15500 Р.</p>
@@ -148,15 +156,16 @@
             <a href="blank.html" class="btn-green">Купить</a>
             <a href="blank.html" class="btn-green-border">В закладки</a>
           </div>
-          <img src="img/snippet-18927.jpg" class="product-image" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/snippet-18927.jpg" class="product-image" width="127" height="112"
+            alt="Перфоратор BOSCH BFG 2000">
           <a href="blank.html" class="product-link">Перфоратор BOSCH HBFG 2000</a>
           <p class="product-price">12500 Р.</p>
         </li>
       </ul>
     </section>
-    <section class="brands">
+    <section class="brands container">
       <div class="section-header">
-        <h2 class="section-title">Популярные производители</h2>
+        <h2 class="section-title">Популярные производители:</h2>
         <a href="blank.html" class="btn btn-brands">Все производители</a>
       </div>
       <ul class="brands-list">
@@ -203,51 +212,53 @@
       </ul>
     </section>
     <section class="services">
-      <h2 class="section-title">Сервисы</h2>
-      <p class="section-text">Хороший интернет-магазин отличается от плохого не только ценами!<br>
-        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-      <div class="services-slider">
-        <input type="radio" id="slider-btn-delivery" name="serv-toggle" checked>
-        <input type="radio" id="slider-btn-warranty" name="serv-toggle">
-        <input type="radio" id="slider-btn-credit" name="serv-toggle">
-        <div class="services-slider-controls">
-          <label for="slider-btn-delivery">Доставка</label>
-          <label for="slider-btn-warranty">Гарантия</label>
-          <label for="slider-btn-credit">Кредит</label>
-        </div>
-        <div class="services-slider-inner">
-          <div class="services-slider-slides">
-            <div class="service-slide-delivery">
-              <h3 class="service-slide-title">Доставка</h3>
-              <p class="section-text">Мы с удовольствием доставим ваш товар прямо<br>
-                к вашему подъезду совершенно бесплатно!<br>
-                Ведь мы неплохо заработаем,<br>
-                поднимая его на ваш этаж!</p>
+      <div class="services-grid container">
+        <h2 class="section-title">Сервисы</h2>
+        <p class="section-text">Хороший интернет-магазин отличается от плохого не только ценами!<br>
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <div class="services-slider">
+          <input type="radio" id="slider-btn-delivery" name="serv-toggle" checked>
+          <input type="radio" id="slider-btn-warranty" name="serv-toggle">
+          <input type="radio" id="slider-btn-credit" name="serv-toggle">
+          <div class="services-slider-controls">
+            <label for="slider-btn-delivery">Доставка</label>
+            <label for="slider-btn-warranty">Гарантия</label>
+            <label for="slider-btn-credit">Кредит</label>
+          </div>
+          <div class="services-slider-inner">
+            <div class="services-slider-slides">
+              <div class="service-slide service-slide-delivery">
+                <h3 class="service-slide-title">Доставка</h3>
+                <p class="section-text">Мы с удовольствием доставим ваш товар прямо<br>
+                  к вашему подъезду совершенно бесплатно!<br>
+                  Ведь мы неплохо заработаем,<br>
+                  поднимая его на ваш этаж!</p>
+              </div>
+              <div class="service-slide service-slide-warranty">
+                <h3 class="service-slide-title">Гарантия</h3>
+                <p class="section-text">Какой то текст про гарантию <br>
+                  Какой то текст про гарантию <br>
+                  Какой то текст про гарантию <br>
+                  Какой то текст про гарантию</p>
+              </div>
+              <div class="service-slide service-slide-credit">
+                <h3 class="service-slide-title">Кредит</h3>
+                <p class="section-text">Текст, призывающий взять кредит <br>
+                  Текст, призывающий взять кредит <br>
+                  Текст, призывающий взять кредит <br>
+                  Текст, призывающий взять кредит</p>
+              </div>
             </div>
-            <div class="service-slide-warranty">
-              <h3 class="service-slide-title">Гарантия</h3>
-              <p class="section-text">Какой то текст про гарантию <br>
-                Какой то текст про гарантию <br>
-                Какой то текст про гарантию <br>
-                Какой то текст про гарантию</p>
-            </div>
-            <div class="service-slide-credit">
-              <h3 class="service-slide-title">Кредит</h3>
-              <p class="section-text">Текст, призывающий взять кредит <br>
-                Текст, призывающий взять кредит <br>
-                Текст, призывающий взять кредит <br>
-                Текст, призывающий взять кредит</p>
-            </div>
-
           </div>
         </div>
       </div>
     </section>
-    <section class="company-contacts">
-      <h3 class="section-title">КОМПАНИЯ «Техномарт»</h3>
-      <p class="section-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для <br>ремонта и
+    <section class="company-contacts container">
+      <h3 class="section-title title-company">КОМПАНИЯ «Техномарт»</h3>
+      <p class="section-text text-company-top">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+        <br>ремонта и
         строительства не оставит равнодушными любителей сэкономить на <br>гастарбайтерах.</p>
-      <p class="section-text">
+      <p class="section-text text-company-bottom">
         Мы можем доставить ваш товар в самые отдаленные точки России!<br>
         Техномарт работает со многими транспортными компаниями:</p>
       <ul class="delivery-companies">
@@ -262,10 +273,10 @@
         </li>
       </ul>
       <a href="blank.html" class="btn btn-company">Подробнее о компании</a>
-      <h3 class="section-title">Контакты</h3>
-      <p class="contacts-text">Вы можете забрать товар сами,<br>
+      <h3 class="section-title title-contacts">Контакты</h3>
+      <p class="section-text text-contacts">Вы можете забрать товар сами,<br>
         заехав в наш офис:</p>
-      <iframe
+      <iframe class="map-contacts"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.598942412363!2d30.32089461559019!3d59.938796869048495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1599822734057!5m2!1sru!2sru"
         width="300" height="158" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
         tabindex="0"></iframe>
@@ -274,61 +285,67 @@
   </main>
   <footer class="page-footer main-footer">
     <div class="footer-top">
-      <a class="logo">
-        <img src="img/logo.svg" alt="ТЕХНОМАРТ" width="108" height="18">
-      </a>
-      <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
-      <ul class="footer-navigation-list">
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Компания</a>
-        </li>
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Новости</a>
-        </li>
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Каталог</a>
-        </li>
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Доставка</a>
-        </li>
-        <li class="footer-navigation-item">
-          <a href="blank.html" class="footer-navigation-link">Контакты</a>
-        </li>
-      </ul>
-      <ul class="footer-catalog-list">
-        <li class="footer-catalog-item">
-          <a href="blank.html" class="footer-catalog-link">Материалы</a>
-        </li>
-        <li class="footer-catalog-item">
-          <a href="blank.html" class="footer-catalog-link">Техника</a>
-        </li>
-        <li class="footer-catalog-item">
-          <a href="blank.html" class="footer-catalog-link">Инструмент</a>
-        </li>
-        <li class="footer-catalog-item">
-          <a href="blank.html" class="footer-catalog-link">Спецпредложения</a>
-        </li>
-      </ul>
+      <div class="grid-footer-top container">
+        <a class="logo-footer">
+          <img src="img/logo-footer.svg" alt="ТЕХНОМАРТ" width="138" height="23">
+        </a>
+        <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+        <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
+        <ul class="footer-navigation-list">
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Компания</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Новости</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Каталог</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Доставка</a>
+          </li>
+          <li class="footer-navigation-item">
+            <a href="blank.html" class="footer-navigation-link">Контакты</a>
+          </li>
+        </ul>
+        <ul class="footer-catalog-list">
+          <li class="footer-catalog-item">
+            <a href="blank.html" class="footer-catalog-link">Материалы</a>
+          </li>
+          <li class="footer-catalog-item">
+            <a href="blank.html" class="footer-catalog-link">Техника</a>
+          </li>
+          <li class="footer-catalog-item">
+            <a href="blank.html" class="footer-catalog-link">Инструмент</a>
+          </li>
+          <li class="footer-catalog-item">
+            <a href="blank.html" class="footer-catalog-link">Спецпредложения</a>
+          </li>
+        </ul>
+      </div>
     </div>
+
     <div class="footer-bottom">
-      <p class="footer-copyright">&copy; 2010-2020 Компания «Техномарт» <br>
-        Все права защищены</p>
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="footer-social-link">Вконтакте</a>
-        </li>
-        <li class="footer-social-item">
-          <a class="footer-social-link">Facebook</a>
-        </li>
-        <li class="footer-social-item">
-          <a class="footer-social-link">Instagram</a>
-        </li>
-      </ul>
-      <p class="footer-contacts-text footer-email">Обратная связь</p>
-      <a href="mail@htmlacademy.ru" class="footer-contacts-link footer-email">mail@htmlacademy.ru</a>
-      <p class="footer-contacts-text footer-develop">Разработано -</p>
-      <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+      <div class="grid-footer-bottom container">
+        <p class="footer-copyright">&copy; 2010-2020 Компания «Техномарт» <br>
+          Все права защищены</p>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="footer-social-link">Вконтакте</a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link">Facebook</a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link">Instagram</a>
+          </li>
+        </ul>
+        <p class="footer-contacts-text footer-email">Обратная связь</p>
+        <a href="mail@htmlacademy.ru" class="footer-contacts-link footer-email">mail@htmlacademy.ru</a>
+        <p class="footer-contacts-text footer-develop">Разработано -</p>
+        <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+      </div>
+
     </div>
   </footer>
 </body>
